--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,137 @@ body {
   .nav-link:nth-child(2) {
     margin: 0 !important;
   }
+  .btn-purple {
+    display: block;
+  }
+}
+.hero-title {
+  font-size: 64px;
+  line-height: 1.2;
+}
+
+.hero-desc {
+  line-height: 1.35;
+  font-size: 24px;
+}
+
+.btn-purple {
+  background-color: #8d46f6;
+  padding: 16px 40px;
+  -webkit-transition: backgrount 0.2s ease-in-out;
+  transition: backgrount 0.2s ease-in-out;
+}
+
+.btn-purple:hover {
+  background-color: #753dca;
+}
+
+@media (max-width: 1400px) {
+  .hero-title {
+    font-size: 48px;
+  }
+  .hero-desc {
+    font-size: 20px;
+  }
+}
+.gta-img {
+  -webkit-box-flex: 1.5;
+      -ms-flex: 1.5;
+          flex: 1.5;
+  height: 330px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  border-radius: 56px;
+  margin-right: 8px;
+  background-color: #8b72ff;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+}
+
+.gta-img:hover {
+  background-color: #8d46f6;
+}
+
+.fortnite-img {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 330px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  border-radius: 56px;
+  margin-left: 8px;
+  background-color: #fdf386;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+  overflow-y: clip;
+}
+
+.fortnite-img:hover {
+  background-color: #71e66e;
+}
+
+.dota-img {
+  width: 100%;
+  height: 330px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  border-radius: 56px;
+  background-color: #69adfd;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+  overflow-y: clip;
+}
+
+.dota-img img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  -o-object-position: center;
+     object-position: center;
+  height: 100%;
+}
+
+.dota-img:hover {
+  background-color: #fcd8ff;
+}
+
+@media (max-width: 420px) {
+  .first-card-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .gta-img {
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
+  .fortnite-img {
+    margin: 0;
+  }
+  .hero-title {
+    font-size: 38px;
+  }
 }
