--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,21 @@ body {
   .btn-purple {
     display: block;
   }
+  .dota-box, .fortnite-box, .gta-box {
+    height: 100%;
+    background-image: none;
+  }
+  .img-mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .img-mobile img {
+    width: 450px;
+  }
 }
 .hero-title {
   font-size: 64px;
@@ -143,24 +158,6 @@ body {
   background-color: #fcd8ff;
 }
 
-@media (max-width: 420px) {
-  .first-card-row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .gta-img {
-    margin-right: 0;
-    margin-bottom: 24px;
-  }
-  .fortnite-img {
-    margin: 0;
-  }
-  .hero-title {
-    font-size: 38px;
-  }
-}
 .footer-link:nth-child(2) {
   margin: 0 24px;
 }
@@ -190,6 +187,9 @@ body {
   }
   .footer-link:nth-child(2) {
     margin: 0;
+  }
+  .img-mobile img {
+    width: 350px;
   }
 }
 .logo {
@@ -228,4 +228,61 @@ body {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
+}
+.dota-box {
+  height: calc(100vh - 112px);
+  background-image: url("../img/pic/dota-big.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: contain;
+}
+
+.gta-box {
+  height: calc(100vh - 112px);
+  background-image: url("../img/pic/gta-big.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: contain;
+}
+
+.fortnite-box {
+  height: calc(100vh - 112px);
+  background-image: url("../img/pic/fortnite-big.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: contain;
+}
+
+.img-mobile {
+  display: none;
+}
+
+.gallery, .articles {
+  background-color: #f1efe4;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  background: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 80%;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
