--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -24,6 +24,17 @@ body{
     .btn-purple{
         display: block;
     }
+    .dota-box, .fortnite-box, .gta-box{
+        height: 100%;
+        background-image: none;
+    }
+    .img-mobile{
+        display: flex;
+        justify-content: flex-end;
+        img{
+            width: 450px;
+        }
+    }
 }
 .hero-title{
     font-size: 64px;
@@ -98,21 +109,6 @@ body{
 .dota-img:hover{
     background-color: #fcd8ff;
 }
-@media (max-width:420px){
-    .first-card-row{
-        flex-direction: column;
-    }
-    .gta-img{
-        margin-right: 0;
-        margin-bottom: 24px;
-    }
-    .fortnite-img{
-        margin: 0;
-    }
-    .hero-title{
-        font-size: 38px;
-    }
-}
 .footer-link:nth-child(2){
     margin:0 24px;
 }
@@ -136,6 +132,9 @@ body{
     .footer-link:nth-child(2){
         margin: 0;
     }
+    .img-mobile img{
+        width: 350px;
+    }
 }
 .logo{
     animation-name: rotation;
@@ -152,5 +151,52 @@ body{
     }
     100%{
         transform:rotate(360deg);
+    }
+}
+
+.dota-box{
+    height: calc(100vh - 112px);
+    background-image: url("../img/pic/dota-big.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: contain;
+}
+.gta-box{
+    height: calc(100vh - 112px);
+    background-image: url("../img/pic/gta-big.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: contain;
+}
+.fortnite-box{
+    height: calc(100vh - 112px);
+    background-image: url("../img/pic/fortnite-big.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: contain;
+}
+.img-mobile{
+    display: none;
+}
+.gallery, .articles{
+    background-color: #f1efe4;
+}
+.swiper{
+    width: 100%;
+    height:100%;
+}
+.swiper-slide{
+    text-align: center;
+    font-size:18px;
+    background:#fff;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    width:80%;
+    img{
+        display:block;
+        width:100%;
+        height:100%;
+        object-fit: cover;
     }
 }
