--- a/pug/pages/dota.pug
+++ b/pug/pages/dota.pug
@@ -49,7 +49,7 @@ block content
                     | Каким получился мультсериал по Dota 2 
                     br
                     | от авторов «Легенды о Корре» 
-                  a.btn.btn-primary(href='#') Читать
+                  a.btn.btn-purple.btn-primary(href='#') Читать
             .col-md-4
               .card
                 .card-body
@@ -61,7 +61,7 @@ block content
                     | Valve снизила стоимость 
                     br
                     | подписки Dota Plus для россиян почти в два раза 
-                  a.btn.btn-primary(href='#') Читать
+                  a.btn.btn-purple.btn-primary(href='#') Читать
             .col-md-4
               .card
                 .card-body
@@ -73,4 +73,4 @@ block content
                     | В Steam был зафиксирован рекорд по
                     br
                     | одновременному количеству игроков
-                  a.btn.btn-primary(href='#') Читать
+                  a.btn.btn-purple.btn-primary(href='#') Читать
